# kyouth-resume-skill-gap-analyzer-app

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  app.py  pyproject.toml
backend/src/: app.py  db_server.py  find_skill_gaps.py  prompt_model.py  tag_data.py
backend/src/week2/: __init__.py  find_skill_gaps.py
frontend/: Dockerfile  pyproject.toml
frontend/src/: app.py  main.py
frontend/src/templates/: chat_page.html
