[project]
name = "backend"
version = "0.1.0"
description = "week3-backend"
readme = "README.md"
requires-python = "==3.14.*"
dependencies = [
    "ruff==0.15.*",
    "fastapi>=0.138.0",
    "jinja2>=3.1.6",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.49.0",
    "fastmcp>=3.4.2",
    "google-genai>=2.10.0",
    "ollama>=0.6.2",
]
